--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: build debug
+        shell: cmd
         run: build.bat
 
       - name: unittests debug
